fragments for timeline and camera

--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tbToolBar"
@@ -33,37 +33,38 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/ivIcon"
                 android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/ivIcon"
                 app:srcCompat="@drawable/nav_logo_whiteout" />
 
             <ImageButton
+                android:id="@+id/bvSettings"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
+                android:background="@android:color/transparent"
+                android:onClick="onClickToSettings"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/instagram_user_outline_24" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <FrameLayout
-        android:id="@+id/flContainer"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:layout_height="493dp"
-        android:layout_above="@id/bottom_navigation"
-        android:layout_alignParentTop="true"
-        android:layout_below="@id/tbToolBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="match_parent">
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content"
-        app:menu="@menu/menu_bottom_navigation"/>
-
-</RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvPosts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
