Making profile fragment

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,17 +33,19 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/ivIcon"
                 android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/ivIcon"
                 app:srcCompat="@drawable/nav_logo_whiteout" />
 
             <ImageButton
+                android:id="@+id/bvSettings"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
-                android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
+                android:background="@android:color/transparent"
+                android:onClick="onClickToSettings"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/instagram_user_outline_24" />
 
@@ -53,11 +55,12 @@
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
-        android:layout_height="493dp"
+        android:layout_height="453dp"
         android:layout_above="@id/bottom_navigation"
         android:layout_alignParentTop="true"
         android:layout_below="@id/tbToolBar"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="58dp" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
