--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -25,10 +25,14 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/ivProfileImage"
+                android:id="@+id/ivProfileImageDetail"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="0dp"
+                android:layout_alignParentLeft="true"
                 android:contentDescription="profile image"
                 app:srcCompat="@drawable/camera_shadow_fill" />
 
@@ -37,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:layout_toRightOf="@id/ivProfileImage"
+                android:layout_toRightOf="@id/ivProfileImageDetail"
                 android:text="Username"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:textStyle="bold" />
