--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -32,6 +32,7 @@
         android:layout_marginStart="8dp"
         android:background="@color/loginPink"
         android:text="Create"
+        android:onClick="onCreatePost"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
