--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/ivProfileImage"
+                android:id="@+id/ivProfileImageDetail"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_margin="8dp"
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:layout_toRightOf="@id/ivProfileImage"
+                android:layout_toRightOf="@id/ivProfileImageDetail"
                 android:text="Username"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:textStyle="bold" />
